[gd_scene load_steps=3 format=3 uid="uid://b7l0s4gqh2xno"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_t7a0f"]
[ext_resource type="FontFile" uid="uid://your_font_uid" path="res://addons/gut/fonts/LobsterTwo-Bold.ttf" id="2_font"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7a0f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_top = 40.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.8, 0.2, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 120
text = "RONALD DUMP"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NormalButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "NORMAL (150s)"

[node name="UnhingedButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "UNHINGED (150s)"

[node name="EndlessButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "ENDLESS"
